--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
@@ -56,6 +58,8 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^6.0.0",
+    "@types/bootstrap": "^4.5.0",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/testing-library__cypress": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
