--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -61,6 +62,7 @@
     "@testing-library/cypress": "^6.0.0",
     "@types/bootstrap": "^4.5.0",
     "@types/react-bootstrap": "^1.0.1",
+    "@types/react-router-dom": "^5.1.5",
     "@types/testing-library__cypress": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
